# GTest_Tutorial

./: CMakeLists.txt  example.cpp  example.hpp
test/: CMakeLists.txt  example_tests.cpp
